--- a/index.html
+++ b/index.html
@@ -24,14 +24,49 @@
 			<h1>Layla's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+					<img id="selfie" src="/Users/laylagracehill/Desktop/selfie.jpg" />
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
+					<p> Hi reader! I'm Layla. I use they/them pronouns and and am a first year Psych Major here at UCSC. I'm originally from the Bay Area; think Oakland Airport. And here are some things about me:
+					</p>
+						<h3>Things I like!</h3>
+							<ul>
+								<li>Animals, especially cats. Specifically my own.</li>
+								<li>Diet Coke.</li>
+								<li>Fashion and shopping second-hand.</li>
+								<li>Video Essays.</li>
+								<li>Sharks.</li>
+								<li>Plants! Even if I can't take care of them.</li>
+							</ul>
+						<h3>Things I don't like!</h3>
+							<ul>
+								<li>Foam.</li>
+								<li>Waking up from naps.</li>
+								<li>Walking long distances in platforms.</li>
+								<li>Baths.</li>
+								<li>Dolphins.</li>
+								<li>Baklava.</li>
+							</ul>
+						<h3>What I do in my free time!</h3>
+							<ul>
+								<li>Sketch.</li>
+								<li>Play Kirby on my Nintendo Switch.</li>
+								<li>Bleach hair; mine and other people's.</li>
+								<li>Nap.</li>
+								<li>Doing puzzles.</li>
+							</ul>
 			</div>
-
 		</section>
 		<nav id="links">
-			<!-- Put links to labs here. -->
+			<div class="minor-section">
+				<h2>Links to Labs</h2>
+					<ul>
+						<li><a href="lab2/index2.html" target="_blank">Lab 2 File Structure</a></li>
+						<li><a href="lab3/index.html" target="_blank">Lab 3 File Structure</a></li>
+						<li><a href="lab4/index.html" target="_blank">Lab 4 File Structure</a></li>
+						<li><a href="lab5/index.html" target="_blank">Lab 5 File Structure</a></li>
+						<li><a href="lab6/index.html" target="_blank">Lab 6 File Structure</a></li>
+					</ul>
+			</div>
 		</nav>
 	</main>
 </body>
