--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - Create and Edit A Local File Structure</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,26 +23,29 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - Create and Edit A Local File Structure</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Create a local file structure on your computer, add index.html files, and upload to the server.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>Most of the issues I dealt with were organizational. I went a bit all-out for my Homepage, and organizing the code in VSCode was a bit time consuming. I still don't entirely understand what GitHub is or does, so all I'm able to do on it is the specific instructions the assignment specifies. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<p>Here are the results of my work: </p>
+					<img src="img/file-structure2.jpg" width="500"/>
+					<img src="img/file-structure4.jpg" width="500"/>
+					<img src="img/file-structure5.jpg" width="500"/>
+					<img src="img/file-structure3.jpg" width="500"/>
+
+
+
 			</div>
+
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
