images update for index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Layla's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img id="selfie" src="/Users/laylagracehill/Desktop/selfie.jpg" />
+					<img src="img/selfie.jpeg">
 					<h2>About Me</h2>
 					<p> Hi reader! I'm Layla. I use they/them pronouns and and am a first year Psych Major here at UCSC. I'm originally from the Bay Area; think Oakland Airport. And here are some things about me:
 					</p>
