--- a/lab4/index.html
+++ b/lab4/index.html
@@ -35,13 +35,8 @@
 			</div>
 
 			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p> <script src="lab4/js/lab.js" DEFER></script> </p>
-			</div>
-
-			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<img src='img/lab 4 java.jpg' width=600 />
 			</div>
 		</section>
 		<nav id="links">
