--- a/lab5/index.html
+++ b/lab5/index.html
@@ -36,8 +36,11 @@
 					<h2>Results</h2>
 						<h3>Script Output</h3>
 						<div class="output">
-							<script type="text/javascript" scr="js/lab.js"></script>
+							<script type="text/javascript" src="js/lab.js"></script>
 						</div>
+
+						<img src=img/lab5.jpg  width="300" style="margin-top: 20px"/>
+
 					<div id="output"></div>
 			</div>
 		</section>
