--- a/lab7/index.html
+++ b/lab7/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 6 - Arrays and Objects</title>
+	<title>Lab 7 - Functions</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,23 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 6 - Arrays and Objects</h1>
+			<h1>Lab 7 - Functions</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Use the example from the last lab to practice arrays and objects in Javascript.</p>
+					<p>Write functions that take user unput and manipulate a string.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>I actually didn't have many problems with this lab. The only thing I had a small issues with was using the Console. If you make a small typo in previous code, you can't correct it and have to start over.</p>
+					<p>I still don't really understand Javascript yet so I wasn't able to make my code as unique as I'd wished. I changed some things from the template on Canvas, but overall I stuck to the information there to make sure my program worked.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Results</h2>
-					<h3>Script Output</h3>
+					<h3>Output</h3>
 					<div class="output">
 						<script type="text/javascript" src="js/lab.js"></script>
 					</div>
-
-					<img src=img/lab6.jpg  width="300" style="margin-top: 20px"/>
 
 				<div id="output"></div>
 		</div>
