--- a/lab8/index.html
+++ b/lab8/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 6 - Arrays and Objects</title>
+	<title>Lab 8 - Anon Functions and Callbacks</title>
+	<script type="text/javascript" src="js/lab.js"></script>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -15,36 +16,28 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 6 - Arrays and Objects</h1>
+			<h1>Lab 8 - Anon Functions and Callbacks</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Use the example from the last lab to practice arrays and objects in Javascript.</p>
+					<p>Experiment with anonymous functions and callbacks.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>I actually didn't have many problems with this lab. The only thing I had a small issues with was using the Console. If you make a small typo in previous code, you can't correct it and have to start over.</p>
+					<p>This whole assignment has been very difficult for me. I really don't understand functions in-depth and the class is moving too fast for me to keep up with my understanding. I eventually figured out how to do this, but it took a while. I tried to complete Task X but I just couldn't do it. </p>
 			</div>
 
 			<div class="minor-section">
-				<h2>Results</h2>
-					<h3>Script Output</h3>
-					<div class="output">
-						<script type="text/javascript" src="js/lab.js"></script>
-					</div>
-
-					<img src=img/lab6.jpg width="300" style="margin-top: 20px"/>
-
-				<div id="output"></div>
-		</div>
+					<h2>Results</h2>
+					<p>Right click on this web page. Click the "Inspect" option. On the top of the right side of the screen, choose "Console." </p>
+			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
