--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 						<li><a href="lab6/index.html" target="_blank">Lab 6 File Structure</a></li>
 						<li><a href="lab7/index.html" target="_blank">Lab 7 File Structure</a></li>
 						<li><a href="lab8/index.html" target="_blank">Lab 8 File Structure</a></li>
+						<li><a href="lab9/index.html" target="_blank">Lab 9 File Structure</a></li>
 					</ul>
 			</div>
 		</nav>
