--- a/lab9/index.html
+++ b/lab9/index.html
@@ -22,17 +22,17 @@
 	<main id="content">
 		<section>
 			<h1>Lab 9 - Libraries and jQuery</h1>
-			<div id="challenge">
+			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Experiment with jQuery.</p>
 			</div>
 
-			<div id="problems">
+			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>It was difficult to remember which elements were classes or ids. Although, I figured this out after spending sometime re-doing my code. My main problem was priority in CSS. The ids for "challenge", "problems", and "results" were taking priority over my "special" class. I had to use ChatGPT to help a little.</p>
 			</div>
 
-			<div id="results">
+			<div class="minor-section">
 					<h2>Results</h2>
 					<p></p>
 			</div>
