--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 						<li><a href="lab8/index.html" target="_blank">Lab 8 File Structure</a></li>
 						<li><a href="lab9/index.html" target="_blank">Lab 9 File Structure</a></li>
 						<li><a href="lab10/index.html" target="_blank">Lab 10 File Structure</a></li>
+						<li><a href="lab11/index.html" target="_blank">Lab 11 File Structure</a></li>
 
 					</ul>
 			</div>
