--- a/lab11/index.html
+++ b/lab11/index.html
@@ -37,8 +37,12 @@
 					<div id="output"></div>
 					<input type="text" id="user-name" placeholder="What's your name?">
 					<button id="submit">Submit</button>
+					<!-- task x -->
+					<div id="output"></div>
+					<input type="text" id="date" placeholder="What's the date today?">
+					<button id="give-date">Submit</button>
 			</div>
-
+			
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
