--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 						<li><a href="lab9/index.html" target="_blank">Lab 9 File Structure</a></li>
 						<li><a href="lab10/index.html" target="_blank">Lab 10 File Structure</a></li>
 						<li><a href="lab11/index.html" target="_blank">Lab 11 File Structure</a></li>
+						<li><a href="lab12/index.html" target="_blank">Lab 12 File Structure</a></li>
 
 					</ul>
 			</div>
