--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,54 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 6 - Arrays and Objects</title>
+    <!-- This title is used for tabs and bookmarks -->
+    <title>Lab 6 - Arrays and Objects</title>
 
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+    <!-- Use UTF character set, a good idea with any webpage -->
+    <meta charset="UTF-8" />
+    <!-- Set viewport so page remains consistently scaled w narrow devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Include a sitewide CSS file for consistent styling across the site -->
+    <link rel="stylesheet" type="text/css" href="../css/site.css">
+    <!-- Lab-specific CSS file for any special styling of this particular page -->
+    <link rel="stylesheet" type="text/css" href="css/lab.css">
+    
+    <!-- load jQuery library to make javascript easier (must be above our lab js)-->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab 6 - Arrays and Objects</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Use the example from the last lab to practice arrays and objects in Javascript.</p>
-			</div>
+    <!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
+    <main id="content">
+        <section>
+            <h1>Lab 6 - Arrays and Objects</h1>
+            <div class="minor-section">
+                    <h2>Challenge</h2>
+                    <p>Use the example from the last lab to practice arrays and objects in Javascript.</p>
+            </div>
 
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>I actually didn't have many problems with this lab. The only thing I had a small issues with was using the Console. If you make a small typo in previous code, you can't correct it and have to start over.</p>
-			</div>
+            <div class="minor-section">
+                    <h2>Problems</h2>
+                    <p>I actually didn't have many problems with this lab. The only thing I had a small issues with was using the Console. If you make a small typo in previous code, you can't correct it and have to start over.</p>
+            </div>
 
-			<div class="minor-section">
-				<h2>Results</h2>
-					<h3>Script Output</h3>
-					<div class="output">
-						<script type="text/javascript" src="js/lab.js"></script>
-					</div>
+            <div class="minor-section">
+                <h2>Results</h2>
+                    <h3>Script Output</h3>
+                    <div class="output">
+                        <script type="text/javascript" src="js/lab.js"></script> 
+                    </div>
 
-					<img src=img/lab6.jpg width="300" style="margin-top: 20px"/>
+                    <img src=img/lab6.jpg width="300" style="margin-top: 20px"/>
 
-				<div id="output"></div>
-		</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
+                <div id="output"></div>
+            </div>
+        </section>
+        <nav id="links">
+            <!-- Put links to other pages (including the homepage) here. -->
+        </nav>
+    </main>
 </body>
 </html>
