--- a/lab9/index.html
+++ b/lab9/index.html
@@ -14,25 +14,27 @@
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script src="js/lab.js" DEFER></script>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
+	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
 			<h1>Lab 9 - Libraries and jQuery</h1>
-			<div class="minor-section">
+			<div id="challenge">
 					<h2>Challenge</h2>
 					<p>Experiment with jQuery.</p>
 			</div>
 
-			<div class="minor-section">
+			<div id="problems">
 					<h2>Problems</h2>
 					<p>It was difficult to remember which elements were classes or ids. Although, I figured this out after spending sometime re-doing my code. My main problem was priority in CSS. The ids for "challenge", "problems", and "results" were taking priority over my "special" class. I had to use ChatGPT to help a little.</p>
 			</div>
 
-			<div class="minor-section">
+			<div id="results">
 					<h2>Results</h2>
 					<p></p>
 			</div>
