--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						<li><a href="lab12/index.html" target="_blank">Lab 12 File Structure</a></li>
 						<li><a href="lab13/index.html" target="_blank">Lab 13 File Structure</a></li>
 						<li><a href="lab14/index.html" target="_blank">Lab 14 File Structure</a></li>
+						<li><a href="lab15/index.html" target="_blank">Lab 15 File Structure</a></li>
 
 					</ul>
 			</div>
